# cc-petline

./: .gitattributes  .gitignore  .t.txt  Cargo.toml  LICENSE  README.md
assets/: LICENSE
assets/frames/: README.md
assets/source/: README.md
examples/: anim.rs  slice.rs
plugin/: README.md  build.ps1
plugin/.claude-plugin/: marketplace.json  plugin.json
plugin/commands/: cc-petline-theme.md  cc-petline.md  charm-setup.md  clawd-pet.md  clawd-theme.md
plugin/hooks/: hooks.json
plugin/scripts/: setup-statusline.js
scripts/: compare_filters.py  convert-gifs.ps1  make_clawd.py
src/: anim.rs  context.rs  events.rs  ghost.rs  main.rs  quips.rs  render.rs  sprite.rs  state.rs  theme.rs
