[package]
name = "clawd-pet"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Animated Fox companion for Claude Code: a sprite mascot that reacts to activity, plus a Charm statusline wrapper."
repository = "https://github.com/Assenav-Gnuj/charm-cc"

[dependencies]
anyhow = "1.0.102"
crossterm = "0.29.0"
image = "0.25.10"
ratatui = "0.30.0"
ratatui-image = { version = "11.0.2", default-features = false, features = ["crossterm", "image-defaults"] }
serde_json = "1.0"
